# Logistic-Regression-and-Naive-Bayes-for-Titanic-Survivor-Prediction

./: Logistic Regression and Naive Bayes for Titanic Survivor Prediction.ipynb  README.md  hello.py  pyproject.toml
